--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "nyc": "^13.1.0",
     "standard": "^12.0.1",
     "tape": "^4.9.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alanshaw/ipld-in-memory.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alanshaw/ipld-in-memory/issues"
+  },
+  "homepage": "https://github.com/alanshaw/ipld-in-memory#readme"
 }
