--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "interface-datastore": "~0.6.0",
     "ipfs-block-service": "~0.15.2",
-    "ipfs-repo": "~0.26.0",
-    "ipld": "~0.20.2"
+    "ipfs-repo": "~0.26.0"
   },
   "devDependencies": {
     "nyc": "^13.1.0",
