--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "Alan Shaw",
   "license": "MIT",
   "dependencies": {
-    "interface-datastore": "~0.6.0",
-    "ipfs-block-service": "~0.15.2",
-    "ipfs-repo": "~0.26.0"
+    "interface-datastore": "^0.7.0",
+    "ipfs-block-service": "^0.16.0",
+    "ipfs-repo": "^0.27.0"
   },
   "devDependencies": {
     "nyc": "^13.1.0",
