--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Alan Shaw",
   "license": "MIT",
   "dependencies": {
+    "hat": "0.0.3",
     "interface-datastore": "^0.8.0",
     "ipfs-block-service": "^0.16.0",
     "ipfs-repo": "^0.30.1"
